--- a/Assignment 4.2.3/.project
+++ b/Assignment 4.2.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assignment_1_4</name>
+	<name>Assignment 4.2.3</name>
 	<comment></comment>
 	<projects>
 	</projects>
